# VAR_AI

./: .env.example  .gitignore  README.md  ROADMAP.md  manage.py  pyproject.toml  requirements.txt
.cursor/rules/: coding-preferences.mdc  my-stack.mdc  workflow-preferences.mdc
deployment/: README.md
deployment/gunicorn/: gunicorn_dev.py  gunicorn_prod.py  gunicorn_test.py  varai-dev.service  varai-prod.service  varai-test.service
deployment/nginx/: dev.varai.ai-scientia.com.conf  test.varai.ai-scientia.com.conf  www.varai.ai-scientia.com.conf
deployment/scripts/: server_control.sh
src/: manage.py  run_parser_tests.py  test_device_file_parse.py  test_parser_factory_directly.py  test_parsers_directly.py
src/apps/clients/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/apps/clients/api/: urls.py
src/apps/inventory/: admin.py  apps.py  models.py  tests.py  urls.py
src/apps/parsers/: admin.py  apps.py  forms.py  models.py  run_parser_tests.py  tests.py  urls.py  views.py
src/apps/projects/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/apps/reports/: admin.py  models.py  tests.py  urls.py  views.py
src/docs/: README.md  database_schema.md  testing.md
src/docs/parsers/: parser_examples.md  parser_patterns.md  parsers.md
src/templates/: home.html
src/templates/base/: base.html  footer.html  header.html
src/utils/: create_favicon.py
src/varai/: asgi.py  settings.py  settings.py.bak  urls.py  views.py  wsgi.py
src/varai/settings/: __init__.py  base.py  dev.py  prod.py  test.py
(+40 files in other folders)
